Fix truncation of Download button for non-FF browsers

--- a/src/amo/pages/Addon/styles.scss
+++ b/src/amo/pages/Addon/styles.scss
@@ -92,7 +92,12 @@
   width: 100%;
 
   .Button {
-    white-space: nowrap;
+    text-align: center;
+    white-space: normal;
+
+    @include respond-to(medium) {
+      white-space: nowrap;
+    }
   }
 
   @include respond-to(extraLarge) {
